<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:paddingBottom="30dp"
    tools:context=".ui.view.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/image_login"
            android:src="@drawable/img_login"
            android:transitionName="imgRegister"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txt_ready"
            android:textSize="13sp"
            android:transitionName="tvTitle"
            app:layout_constraintStart_toStartOf="@+id/img_login"
            app:layout_constraintTop_toBottomOf="@+id/img_login" />

        <TextView
            android:id="@+id/txt_title_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/login_untuk_melanjutkan"
            android:textSize="18sp"
            android:transitionName="tvName"
            app:layout_constraintStart_toStartOf="@+id/img_login"
            app:layout_constraintTop_toBottomOf="@+id/txt_welcome"
            tools:alpha="100" />

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txt_email"
            android:transitionName="tvEmail"
            app:layout_constraintStart_toStartOf="@+id/img_login"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_login" />

        <com.mc7.mystoryapp.ui.customview.MyEditTextEmail
            android:id="@+id/edt_email_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawablePadding="16dp"
            android:drawableTint="?attr/colorSecondary"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:transitionName="edtEmail"
            app:layout_constraintEnd_toEndOf="@+id/img_login"
            app:layout_constraintStart_toStartOf="@+id/img_login"
            app:layout_constraintTop_toBottomOf="@+id/txt_email" />

        <TextView
            android:id="@+id/txt_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txt_password"
            android:transitionName="tvPass"
            app:layout_constraintStart_toStartOf="@+id/img_login"
            app:layout_constraintTop_toBottomOf="@+id/edt_email_login" />

        <com.mc7.mystoryapp.ui.customview.MyEditTextPassword
            android:id="@+id/edt_pass_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawablePadding="16dp"
            android:drawableTint="?attr/colorSecondary"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:transitionName="edtPass"
            app:layout_constraintEnd_toEndOf="@+id/img_login"
            app:layout_constraintStart_toStartOf="@+id/img_login"
            app:layout_constraintTop_toBottomOf="@+id/txt_pass" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginTop="24dp"
            android:text="@string/login_now"
            android:transitionName="btnRegister"
            app:layout_constraintEnd_toEndOf="@+id/img_login"
            app:layout_constraintStart_toStartOf="@+id/img_login"
            app:layout_constraintTop_toBottomOf="@+id/edt_pass_login" />

        <TextView
            android:id="@+id/txt_daftar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/txt_daftar"
            android:transitionName="tvLogin"
            app:layout_constraintStart_toStartOf="@+id/btn_login"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>