<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_map"
        android:icon="@drawable/baseline_map_24"
        app:showAsAction="ifRoom"
        android:title="@string/google_maps"/>

    <item
        android:id="@+id/list_menu"
        android:icon="@drawable/baseline_menu_24"
        app:showAsAction="ifRoom"
        android:title="@string/main_menu">
        <menu>
            <item
                android:id="@+id/action_logout"
                android:title="@string/logout"
                android:icon="@drawable/baseline_logout_24"
                app:showAsAction="never"/>
        </menu>
    </item>

</menu>