...
    <string name="switch_camera">Switch Camera</string>
    <string name="input_your_name">Input Your Name</string>
    <string name="google_maps">Google Maps</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="try_again">Try Again</string>
    <string name="upload_with_my_location">Upload With My Location</string>
    <string name="confirm_logout">Are you really want to logout?</string>
    <string name="error_min_4_char">Input min 4 character!</string>
    <string name="error_email">Input the right email!</string>
    <string name="error_password_8">Input password min 8 character</string>
</resources>
